<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

       <ImageView
           android:layout_width="200dp"
           android:layout_height="200dp"
           android:layout_gravity="center"
           android:src="@drawable/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bemVindo"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/sobre1"
            android:textAlignment="center"
            android:textColor="@color/preto"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/sobre2"
            android:textAlignment="center"
            android:textColor="@color/preto"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agradecimento"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>